--- a/app/gateway-picpay/composer.json
+++ b/app/gateway-picpay/composer.json
@@ -8,7 +8,7 @@
         "php": ">=7.1.3",
         "enqueue/amqp-bunny": "^0.8",
         "laravel/lumen-framework": "5.8.*",
-	    "php-amqplib/php-amqplib": ">=2.6.1"
+        "bschmitt/laravel-amqp": "^2.0"
     },
     "require-dev": {
         "fzaninotto/faker": "^1.4",
