--- a/app/gateway-picpay/composer.json
+++ b/app/gateway-picpay/composer.json
@@ -6,9 +6,10 @@
     "type": "project",
     "require": {
         "php": ">=7.1.3",
+        "bschmitt/laravel-amqp": "^2.0",
         "enqueue/amqp-bunny": "^0.8",
         "laravel/lumen-framework": "5.8.*",
-        "bschmitt/laravel-amqp": "^2.0"
+        "php-amqplib/php-amqplib": "^2.10"
     },
     "require-dev": {
         "fzaninotto/faker": "^1.4",
