--- a/app/transactions-service-picpay/composer.json
+++ b/app/transactions-service-picpay/composer.json
@@ -7,7 +7,8 @@
     "require": {
         "php": ">=7.1.3",
         "bschmitt/laravel-amqp": "^2.0",
-        "laravel/lumen-framework": "5.8.*"
+        "laravel/lumen-framework": "5.8.*",
+        "php-amqplib/php-amqplib": "^2.10"
     },
     "require-dev": {
         "fzaninotto/faker": "^1.4",
