--- a/app/gateway-picpay/composer.json
+++ b/app/gateway-picpay/composer.json
@@ -8,6 +8,7 @@
         "php": ">=7.1.3",
         "bschmitt/laravel-amqp": "^2.0",
         "enqueue/amqp-bunny": "^0.8",
+        "firebase/php-jwt": "v5.0.0",
         "laravel/lumen-framework": "5.8.*",
         "php-amqplib/php-amqplib": "^2.10"
     },
